--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
 		"@tailwindcss/vite": "^4.1.18",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.12.0",
-		"tailwindcss": "^4.1.18"
+		"tailwindcss": "^4.1.18",
+		"zod": "^4.3.5",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.39.1",
