--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@mui/material": "^7.3.7",
+		"@mui/x-charts": "^8.24.0",
 		"@tailwindcss/vite": "^4.1.18",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
