--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-icons": "^5.5.0",
+		"react-qr-barcode-scanner": "^2.1.20",
 		"react-router-dom": "^7.12.0",
 		"tailwindcss": "^4.1.18",
 		"zod": "^4.3.5",
