--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@mui/x-charts": "^8.24.0",
 		"@tailwindcss/vite": "^4.1.18",
 		"firebase": "^12.7.0",
+		"html5-qrcode": "^2.3.8",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"react-icons": "^5.5.0",
