--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@mui/material": "^7.3.7",
 		"@mui/x-charts": "^8.24.0",
 		"@tailwindcss/vite": "^4.1.18",
+		"date-fns": "^4.1.0",
 		"firebase": "^12.7.0",
 		"html5-qrcode": "^2.3.8",
 		"react": "^19.2.0",
