--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-qr-barcode-scanner": "^2.1.20",
 		"react-router-dom": "^7.12.0",
 		"tailwindcss": "^4.1.18",
+		"xlsx": "^0.18.5",
 		"zod": "^4.3.5",
 		"zustand": "^5.0.9"
 	},
