--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-icons": "^5.5.0",
 		"react-qr-barcode-scanner": "^2.1.20",
 		"react-router-dom": "^7.12.0",
+		"sonner": "^2.0.7",
 		"tailwindcss": "^4.1.18",
 		"xlsx": "^0.18.5",
 		"zod": "^4.3.5",
