add audio antrian

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-icons": "^5.5.0",
 		"react-qr-barcode-scanner": "^2.1.20",
 		"react-router-dom": "^7.12.0",
+		"react-speech-kit": "^3.0.1",
 		"sonner": "^2.0.7",
 		"tailwindcss": "^4.1.18",
 		"xlsx": "^0.18.5",
@@ -42,6 +43,7 @@
 		"@types/node": "^24.10.1",
 		"@types/react": "^19.2.5",
 		"@types/react-dom": "^19.2.3",
+		"@types/react-speech-kit": "^3.0.0",
 		"@vitejs/plugin-react-swc": "^4.2.2",
 		"eslint": "^9.39.1",
 		"eslint-plugin-react-hooks": "^7.0.1",
